# schoolThing

./: .clang-format  .gitignore  CMakeLists.txt  Presentation.pptx  Projektantrag.docx  format.sh  main.cpp  ~$Presentation.pptx
src/: AppleTree.cpp  AppleTree.h
src/states/: AppleTreeState.h  ApplesState.cpp  ApplesState.h  DeadState.cpp  DeadState.h  GrowingState.cpp  GrowingState.h  NoApplesState.cpp  NoApplesState.h
